# SmallBench

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/smallbench/: __init__.py
src/smallbench/baselines/agents/: core.py  react.py  react_ft_demo.py
src/smallbench/benchmarks/: core.py
src/smallbench/benchmarks/bcb_a/: abstractions.py  aci.py  bench.py  contexts.py  test.py
src/smallbench/benchmarks/first_pr/: gistfile0.txt  sketch.txt  test.py
src/smallbench/core/: aci.py
src/smallbench/utilities/code/: docker.py  modal.py  reprex.py  test.py
