[project]
name = "smallbench"
version = "0.1.0"
description = "Small Benchmarks for LM Agents"
authors = [{name = "Josh Purtell", email = "jmvpurtell@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apropos-ai==0.1.14",
    "ollama>=0.3.2",
]
classifiers = []

[project.urls]
Homepage = "https://github.com/yourusername/smallbench"
Repository = "https://github.com/yourusername/smallbench.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
